Add missing endpoints and tests for said endpoints

--- a/frontend/test-multi-player.html
+++ b/frontend/test-multi-player.html
@@ -200,7 +200,8 @@
           id="player-${playerNumber}"
           src="${playerUrl}"
           sandbox="allow-same-origin allow-scripts allow-forms allow-popups"
-          title="Player ${playerNumber}">
+          title="Player ${playerNumber}"
+          allow="clipboard-write">
         </iframe>
       `;
       return container;
